--- a/er.html
+++ b/er.html
@@ -1,1 +1,1 @@
-<img src="blob:https://imgur.com/e3fd1aa5-dcd6-442e-a750-ee3f133c8b5d">
+<img src="https://imgur.com/e3fd1aa5-dcd6-442e-a750-ee3f133c8b5d">
